<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="todo">TODO</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="click_to_play">Play vs Android</string>
    <string name="click_to_play_online">Play online</string>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="your_turn">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="turn_player1">Player 1\'s turn.</string>
    <string name="turn_player2">Player 2\'s turn.</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_you_won">You won!</string>
    <string name="result_you_lost">You lost...</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="result_player1_wins">Player 1 won!</string>
    <string name="result_player2_wins">Player 2 won!</string>
    <string name="newgame">New Game</string>
    <string name="playagain">Play again</string>
    <string name="blank"> </string>
    <string name="waiting_for_other_player_to_click">Waiting for other player... </string>
    <string name="humanscore">You : </string>
    <string name="you">You : </string>
    <string name="ties">Ties: </string>
    <string name="computerscore">Android : </string>
    <string name="opponent"></string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>
    <string name="difficulty_choose">Choose difficulty :</string>
    <string name="quit_question">Are you sure you want to quit ?</string>
    <string name="quit_yes">Yes</string>
    <string name="quit_no">No</string>
    <string name="sign_out_question">Are you sure you want to sign out ?</string>
    <string name="sign_out_yes">Yes</string>
    <string name="sign_out_no">No</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="username">Username...</string>
    <string name="login">Login</string>
    <string name="signup">Not registered yet ?</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="minimum_password">Password must be at least 6 characters long !</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="sign_out">Sign Out and get back to Main Menu</string>
    <string name="default_notification_channel_id">TicTacToe_CH_01</string>

</resources>
